map is being loaded

--- a/google-maps/index.html
+++ b/google-maps/index.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <style type="text/css">
-      html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+      html, body, #map { height: 100%; margin: 0; padding: 0;}
     </style>
   </head>
 
   <body>
-    <div id="map-canvas"></div>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+    <div id="map"></div>
     <script type="text/javascript" src="googlemaps.js"></script>
   </body>
 
