--- a/angularjs-egghead/index.html
+++ b/angularjs-egghead/index.html
@@ -6,30 +6,28 @@
     <title>Bookmarks</title>
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+
+    <style type="text/css">
+      /*.active {
+        background: red;
+      }*/
+    </style>
   </head>
   <body ng-controller="MainCtrl">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3 col-md-2 sidebar">
                 <ul class="nav nav-sidebar">
-                    <li ng-repeat="category in categories"><a href="#">{{ category.name }}</a></li>
+                    <li ng-repeat="category in categories" ng-class="{'active':isCurrentCategory(category)}">
+                      <a href="#" ng-click="setCurrentCategory(category)">{{ category.name }}</a>
+                    </li>
                 </ul>
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                <div>
+                <div ng-repeat="bookmark in bookmarks | filter:{category:currentCategory.name}">
                     <button type="button" class="close">&times;</button>
                     <button type="button" class="btn btn-link"><span class="glyphicon glyphicon-pencil"></span></button>
-                    <a href="#" target="_blank">Bookmark</a>
-                </div>
-                <div>
-                    <button type="button" class="close">&times;</button>
-                    <button type="button" class="btn btn-link"><span class="glyphicon glyphicon-pencil"></span></button>
-                    <a href="#" target="_blank">Bookmark</a>
-                </div>
-                <div>
-                    <button type="button" class="close">&times;</button>
-                    <button type="button" class="btn btn-link"><span class="glyphicon glyphicon-pencil"></span></button>
-                    <a href="#" target="_blank">Bookmark</a>
+                    <a href="{{ bookmark.url }}" target="_blank">{{ bookmark.title }}</a>
                 </div>
                 <hr/>
             </div>
