--- a/angularjs-egghead/index.html
+++ b/angularjs-egghead/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 
     <style type="text/css">
-      /*.active {
-        background: red;
-      }*/
+      .active {
+        background: #eee;
+      }
     </style>
   </head>
   <body ng-controller="MainCtrl">
@@ -24,12 +24,47 @@
                 </ul>
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                <div ng-repeat="bookmark in bookmarks | filter:{category:currentCategory.name}">
+                <div ng-repeat="bookmark in bookmarks | filter:{category:currentCategory.name}" ng-class="{'active':isSelectedBookmark(bookmark.id)}">
                     <button type="button" class="close">&times;</button>
-                    <button type="button" class="btn btn-link"><span class="glyphicon glyphicon-pencil"></span></button>
+                    <button type="button" class="btn btn-link" ng-click="setEditedBookmark(bookmark);startEditing();"><span class="glyphicon glyphicon-pencil"></span></button>
                     <a href="{{ bookmark.url }}" target="_blank">{{ bookmark.title }}</a>
                 </div>
                 <hr/>
+                <!-- CREATING -->
+                <div ng-if="shouldShowCreating()">
+                   <button type="button" class="btn btn-link" ng-click="startCreating()">
+                       <span class="glyphicon glyphicon-plus"></span>
+                       Create Bookmark
+                   </button>
+                   <form class="create-form" ng-show="isCreating" role="form" ng-submit="createBookmark(newBookmark)" novalidate>
+                       <div class="form-group">
+                           <label for="newBookmarkTitle">Bookmark Title</label>
+                           <input type="text" class="form-control" id="newBookmarkTitle" ng-model="newBookmark.title" placeholder="Enter title">
+                       </div>
+                       <div class="form-group">
+                           <label for="newBookmarkURL">Bookmark URL</label>
+                           <input type="text" class="form-control" id="newBookmarkURL" ng-model="newBookmark.url" placeholder="Enter URL">
+                       </div>
+                       <button type="submit" class="btn btn-info btn-lg">Create</button>
+                       <button type="button" class="btn btn-default btn-lg pull-right" ng-click="cancelCreating()">Cancel</button>
+                   </form>
+                </div>
+                <!-- EDITING -->
+                <div ng-if="shouldShowEditing()">
+                  <h4>Editing {{ editedBookmark.title }}</h4>
+                  <form class="edit-form" role="form" ng-submit="updateBookmark(editedBookmark)" novalidate>
+                      <div class="form-group">
+                          <label for="editedBookmarkTitle">Bookmark Title</label>
+                          <input type="text" class="form-control" id="editedBookmarkTitle" ng-model="editedBookmark.title" placeholder="Enter title">
+                      </div>
+                      <div class="form-group">
+                          <label for="editedBookmarkURL">Bookmark URL</label>
+                          <input type="text" class="form-control" id="editedBookmarkURL" ng-model="editedBookmark.url" placeholder="Enter URL">
+                      </div>
+                      <button type="submit" class="btn btn-info btn-lg">Save</button>
+                      <button type="button" class="btn btn-default btn-lg pull-right" ng-click="cancelEditing()">Cancel</button>
+                  </form>
+                </div>
             </div>
         </div>
     </div>
